--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "liveServer.settings.port": 5501
+  "liveServer.settings.ignoreFiles": [
+    "**/data/*.json",
+    "**/server/data/*.json"
+  ],
+  "liveServer.settings.fullReload": false
 }
